integration produit + film + user
Co-authored-by: Emma T'Allah ZOUAOUI <emmazouaoui@users.noreply.github.com>
Co-authored-by: Hajlaouiloujain <Hajlaouiloujain@users.noreply.github.com>

--- a/templates/back/filmTables.html.twig
+++ b/templates/back/filmTables.html.twig
@@ -1,5 +1,4 @@
 {% extends 'baseBack.html.twig' %}
-
 {% import 'back/macros.html.twig' as macros %}
 
 {% block backContent %}
@@ -193,6 +192,9 @@
                                                 Category
                                             </th>
                                             <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                Cinemas
+                                            </th>
+                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
                                                 Time
                                             </th>
                                             <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
@@ -242,6 +244,15 @@
                                                     <p class="text-xs font-weight-bold mb-0">
                                                         {% for category in film.categorys %}
                                                             <a href="{{ path('app_category_show', {'id': category.id}) }}">{{ category.nom }}</a>
+                                                            {% if not loop.last %},
+                                                            {% endif %}
+                                                        {% endfor %}
+                                                    </p>
+                                                </td>
+                                                <td class="align-middle text-center text-sm">
+                                                    <p class="text-xs font-weight-bold mb-0">
+                                                        {% for cinema in film.cinemas %}
+                                                            <a href="{{ path('app_cinema_show', {'idCinema': cinema.idCinema}) }}">{{ cinema.nom }}</a>
                                                             {% if not loop.last %},
                                                             {% endif %}
                                                         {% endfor %}
