--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -99,7 +99,7 @@
                                 <a class="nav-link" href="{{ path('app_cinema_liste') }}">{{ 'cinemas' }}</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">{{ 'Team' }}</a>
+                                <a class="nav-link" href="{{ path('app_produit_liste') }}">Products</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="">{{ 'Contact Us' }}</a>
