--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -9,6 +9,7 @@
 		<title>
 			Rakcha
 		</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"/>
 		 <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
 		 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
