--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,10 +8,12 @@
 			{% endblock %}
 		</title>
 		<link href="data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22&gt;&lt;text y=%221.2em%22 font-size=%2296%22&gt;⚫️&lt;/text&gt;&lt;text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22&gt;sf&lt;/text&gt;&lt;/svg&gt;" rel="icon"/> {% block stylesheets %}{% endblock %}
+          {#  {{ encore_entry_link_tags('app') }} #}
 		<link
 		href="{{ asset('css/argon-dashboard.css?v=2.0.4') }}" id="pagestyle" rel="stylesheet"/>
 
 	{# {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
 											{% block importmap %}
 												{{ importmap('app') }}
 											{% endblock %}
